# earthquake-predictor

./: .gitignore  README.md  quix.yaml
.devcontainer/: devcontainer.json
docker-compose/: Makefile  feature_pipeline.yaml  redpanda.yaml
earthquake-producer/: Makefile  app.yaml  dockerfile  main.py  pyproject.toml  setup_live_config.sh
earthquake-producer/src/: main.py
earthquake-producer/src/seismic_portal_api/: earthquake.py  websocket.py
services/earthquake-dashboard/: pyproject.toml
services/earthquake-dashboard/src/: config.py  frontend.py  hopsworks_api.py
services/earthquake-producer/: Makefile  app.yaml
services/earthquake-producer/src/: config.py
services/earthquake-producer/src/seismic_portal_api/: earthquake.py  websocket.py
services/earthquake_aggregator/: Dockerfile  Makefile  app.yaml  pyproject.toml  setup_historical_config.sh  setup_live_config.sh
services/earthquake_aggregator/src/: config.py  main.py
services/earthquake_dashboard/: Dockerfile  Makefile  app.yaml  pyproject.toml  requirements.txt  setup_config.sh
services/earthquake_dashboard/src/: config.py  frontend.py  hopsworks_api.py
services/earthquake_dashboard/src/external_data/: regions.py
services/earthquake_predictor/: Makefile  pyproject.toml  setup_config.sh
services/earthquake_predictor/src/: config.py  data_preprocessing.py  data_reader.py  training.py  training_data.py
services/earthquake_predictor/src/feature_generation/: data_preprocessing.py  data_reader.py  data_writer.py
services/earthquake_producer/: Dockerfile  Makefile  app.yaml  pyproject.toml  setup_historical_config.sh  setup_live_config.sh
services/earthquake_producer/src/: config.py  main.py
services/earthquake_producer/src/seismic_portal_api/: earthquake.py  historical_data.py  utils.py  websocket.py
services/kafka-to-feature-store/: Makefile  app.yaml  setup_historical_config.sh  setup_live_config.sh
services/kafka-to-feature-store/src/: config.py  hopsworks_api.py  main.py
services/seismic_data_sink/: Makefile  app.yaml  pyproject.toml  setup_historical_aggregated_config.sh  setup_historical_config.sh  setup_live_aggregated_config.sh  setup_live_config.sh
services/seismic_data_sink/src/: config.py  hopsworks_api.py  main.py
