[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Anton J <antonjavelosa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
websocket-client = "^1.8.0"
tornado = "^6.4.1"
quixstreams = "^2.7.0"
python-dateutil = "^2.9.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
