[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Anton J <antonjavelosa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
streamlit = "^1.36.0"
hopsworks = "^4.1.1"
pydantic-settings = "^2.3.4"
loguru = "^0.7.2"
xmltodict = "^0.13.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
