[project]
name = "earthquake-dashboard"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "streamlit>=1.36.0",
    "hopsworks>=4.1.1",
    "pydantic-settings>=2.3.4",
    "loguru>=0.7.2",
    "xmltodict>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
