[project]
name = "earthquake-dashboard"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "streamlit>=1.36.0,<2.0.0",
    "hopsworks>=4.1.1,<5.0.0",
    "pydantic-settings>=2.3.4,<3.0.0",
    "loguru>=0.7.2,<0.8.0",
    "xmltodict>=0.13.0,<0.14.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.3,<0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
