[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Anton J <antonjavelosa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
hopsworks = "^4.1.1"
pandas = "<2.2.0"
loguru = "^0.7.2"
xmltodict = "^0.13.0"
great-expectations = "^0.18.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
