[project]
name = "earthquake-producer"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "loguru>=0.7.2",
    "websocket-client>=1.8.0",
    "tornado>=6.4.1",
    "quixstreams>=2.7.0",
    "python-dateutil>=2.9.0.post0",
    "pydantic-settings>=2.3.4",
    "xmltodict>=0.13.0",
    "pandas>=2.2.2",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.5.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
