[project]
name = "seismic-data-sink"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "quixstreams>=2.7.0,<3.0.0",
    "loguru>=0.7.2,<0.8.0",
    "hopsworks>=4.1.1,<5.0.0",
    "pyarrow>=19.0.1,<20.0.0",
    "urllib3>=2.6.3,<3.0.0",
    "pyasn1>=0.6.2,<0.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.2,<0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
